Bug 1517074 - [Linux/Gtk] Enable native (xdg-desktop based) file dialog on KDE only due to Gtk+ regression, r=jhorak

Also add widget.allow-gtk-native-file-chooser preference value to force enable on all systems.

Differential Revision: https://phabricator.services.mozilla.com/D16184