widget/gtk/nsFilePicker.h
@@ -83,6 +83,7 @@ class nsFilePicker : public nsBaseFilePicker {
 #ifdef MOZ_WIDGET_GTK
   GtkFileChooserWidget *mFileChooserDelegate;
 #endif
+  bool mUseNativeFileChooser;
 };
 
 #endif
